<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="20dp"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/colorPrimary"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_percent_task"
            android:layout_width="118dp"
            android:layout_height="match_parent"
            android:background="@drawable/bg_rect_blue_light_rad_50"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textSize="50sp"
            tools:text="@string/percent_task"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_name_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/tv_percent_task"
            android:background="@drawable/bg_rect_yellow_rad_50"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/name_task"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_desc_task"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/tv_name_task"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/tv_percent_task"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/desc_task"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>