<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailTaskActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_detail_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhiteBlue"
            android:padding="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_percent_task_detail"
                style="@style/PercentTaskTitle"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/percent_task"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_title_task_detail"
                style="@style/TitleLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_percent_task_detail"
                tools:text="@string/name_task"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_description_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description_title"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title_task_detail"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_desc_task_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/tv_description_title"
                tools:text="@string/desc_task"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>